# Crop_Disease_Detection

./: .gitignore  PAPER_REVISION_DETAILS.md  README.md  RESULTS.md  pyproject.toml
Cluster bean/: Cluster_bean_Field_DenseNet121.ipynb
Cowpea/: Cowpea_Field_DenseNet121.ipynb  Cowpea_Lab_DenseNet121.ipynb  Cowpea_Mixed_DenseNet121.ipynb  Cowpea_Mixed_Xception.ipynb
Okra/: Okra_Field_DenseNet121.ipynb  Okra_Lab_DenseNet121.ipynb  Okra_Mixed_DenseNet121.ipynb  Okra_Mixed_Xception.ipynb  Okra_ResNet50.ipynb
Potato/: Potato_Lab_AlexNet.ipynb  Potato_Lab_Custom_CNN.ipynb  Potato_Lab_DenseNet.ipynb  Potato_Lab_InceptionV3.ipynb  Potato_Lab_VGG16.ipynb  Potato_Lab_Xception.ipynb  Potato_Lab_cnn.ipynb
configs/: base.yaml  dehazing.yaml  densenet_variants.yaml  transformers.yaml
outputs/: complexity.csv  cv_5fold_summary.csv  pilot_results.csv
outputs/densenet_variants-cluster_bean-densenet121-f0/: test_preds.npz
outputs/densenet_variants-cluster_bean-densenet121-f1/: report_test.txt  test_preds.npz
outputs/densenet_variants-cluster_bean-densenet121-f2/: test_preds.npz
outputs/densenet_variants-cluster_bean-densenet121-f3/: test_preds.npz
outputs/densenet_variants-cluster_bean-densenet121-f4/: report_test.txt  test_preds.npz
outputs/densenet_variants-cluster_bean-densenet161-f0/: test_preds.npz
outputs/densenet_variants-cluster_bean-densenet169-f0/: test_preds.npz
scripts/: run_5fold_focused.sh  run_analysis.sh  run_dehaze_gradcam.sh  run_dehazing.sh  run_densenet_variants.sh  run_pilot.sh  run_transformers.sh
src/cropdl/: config.py  run_eval.py  seed.py  (+1 more)
(+188 files in other folders)
