[project]
name = "cropdl"
version = "0.1.0"
description = "Crop disease classification: DenseNet variants, transformers, dehazing, and rigorous evaluation"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "torch==2.3.1",
    "torchvision==0.18.1",
    "timm>=1.0.7",
    "wandb>=0.17",
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "numpy>=1.26,<2.0",
    "pillow>=10.3",
    "pillow-heif>=0.16",
    "opencv-python-headless>=4.9",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "grad-cam>=1.5",
    "fvcore>=0.1.5.post20221221",
    "ptflops>=0.7.3",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "scipy>=1.12",
    "torchmetrics>=1.4",
]

[tool.uv]
package = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cropdl"]
